# mantis

./: .gitignore  README.md  build.bat  colors.ts  pyproject.toml
core/: __init__.py  __main__.py  main.py
core/analysis/: __init__.py  gaussian_conv.py  predict_split.py
core/api/: __init__.py  apis.py
core/cli/: __init__.py
core/img/: __init__.py  color_table.py  mask.py  page_utils.py  pdf2img.py  utils.py
core/shared/: operations.py  typing.py
core/store/: __init__.py  models.py
editor/: auto-imports.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
editor/src/: App.vue  colors.ts  env.d.ts  main.css  main.js  main.ts  requests.ts
editor/src/components/: bottom-bar.vue  central-view.vue  header-menu.vue  information.vue  side-menu.vue
editor/src/components/ScoreDisplayer/: detect-displayer.vue  division-displayer.vue  margin-displayer.vue  margin-stage.vue  mask-displayer.vue  score-displayer.vue  score-line.vue  score-stage.vue
editor/src/components/SplitDisplayer/: split-displayer.vue
editor/src/components/ToolInformation/: detect-information.vue  division-information.vue  margin-information.vue  session-information.vue  split-information.vue  toggle-pen.vue
editor/src/locales/: en_us.json  zh_cn.json
editor/src/store/: appState.ts  documentState.ts  pageState.ts  utils.ts
tauri/: package.json  pnpm-lock.yaml
tauri/src-tauri/: tauri.conf.json
tauri/src-tauri/src/: main.rs
