[project]
name = "mantis"
version = "0.1dev"
description = "An all-in-one helper for score synchronization video makers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.7",
    "scipy>=1.15.3",
    "uvicorn>=0.34.3",
]
