[project]
name = "mantis"
version = "0.1dev"
description = "An all-in-one helper for score synchronization video makers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn>=0.35.0",
    "fastapi>=0.116.0",
    "python-multipart>=0.0.20",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.7",
    "scipy>=1.16.0",
    "scipy-stubs>=1.16.0.2",
    "pymupdf>=1.26.3",
    "typer>=0.16.0",
    "sqlmodel",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
]
